--- a/main.html
+++ b/main.html
@@ -9,6 +9,62 @@
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<thead>
+			<tr>
+				<th>
+					NAME
+				</th>
+				<th>
+					ROLL NO
+				</th>
+				<th>
+					CLASS
+					
+				</th>
+				<th>
+					WIN
+				</th>
+				<th>
+					MARKS
+				</th>
+			</tr>
+			<tbody>
+				<tr>
+					<td>HACKERMAN</td>
+					<td>4</td>
+	              	<td>9</td>
+					<td>8</td>
+					<td>1</td>
+					<td>9</td>
+			    </tr>
+		        <tr>
+		          <td>CoolDoggo</td>   
+		          <td>13</td>
+		          <td>4</td>
+		          <td>6</td>
+                  <td>4</td>
+				  <td>5</td>
+		        </tr>
+		       <tr>
+			   <td>Anderews</td>
+			   <td>19</td>
+			  <td>2</td>
+			  <td>10</td>
+			  <td>11</td>
+			  <td>0</td>
+		      </tr>
+		     <tr>
+			<td>Strawberry</td>
+		    <td>2</td>
+			<td>9</td>
+			<td>3</td>
+			<td>5</td>
+			<td>1</td>
+		    </tr>
+			</tbody>
+		 </thead>
+      	</table>
 
         
 </body>
